Estilo de paginas finalizados, no responsive

--- a/css/style.css
+++ b/css/style.css
@@ -1396,47 +1396,8 @@ footer{
     font-size: 2rem;
 }
 
-/* .info-contacto p{
-    grid-column: 1/4;
-    grid-row: 3/4;
-    justify-self: center;
-    align-self: center;
-    font-size: 2rem;
-}
-
-.info-contacto .mail{
-    grid-column: 1/2;
-    grid-row: 2/3;
-    justify-self: center;
-    align-self: center;
-    font-size: 2rem;
-}
-
-.info-contacto .mail i{
-    font-size: 2rem;
-}
-
-.info-contacto .phone{
-    grid-column: 2/3;
-    grid-row: 2/3;
-    justify-self: center;
-    align-self: center;
-    font-size: 2rem;
-}
-
-.info-contacto .phone i{
-    font-size: 2rem;
-}
-
-.info-contacto .ubi{
-    grid-column: 3/4;
-    grid-row: 2/3;
-    justify-self: center;
-    align-self: center;
-    font-size: 2rem;
-}
-
-.info-contacto .ubi i{
-    font-size: 2rem; 
-}
-*/
+                                                    /****/
+                                                /**FINALIZADO-ESTILO DE PAGINAS**/
+                                                    /****/
+                                                /**RESPONSIVE-MEDIAQUERY**/
+                                                    /****/
