--- a/css/style.css
+++ b/css/style.css
@@ -920,7 +920,7 @@ footer{
 .red-box p{
     font-size: 1.8rem;
     font-weight: normal;
-    padding: 3rem;
+    padding-left: 3rem;
     margin: 0;
 }
 
@@ -955,9 +955,9 @@ footer{
 }
 
 .consul-box p{
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     font-weight: normal;
-    padding: 3rem;
+    padding-left: 2rem;
     margin: 0;
 }
 
@@ -986,7 +986,7 @@ footer{
 }
 
 .rebran-box h2{
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: bold;
     text-align: center;
 }
@@ -994,7 +994,7 @@ footer{
 .rebran-box p{
     font-size: 1.8rem;
     font-weight: normal;
-    padding: 3rem;
+    padding-left: 3rem;
     margin: 0;
 }
 
@@ -1031,7 +1031,7 @@ footer{
 .seo-box p{
     font-size: 1.8rem;
     font-weight: normal;
-    padding: 3rem;
+    padding-left: 3rem;
     margin: 0;
 }
 
@@ -1177,7 +1177,7 @@ footer{
 .portfolioText{
     text-align: justify;
     font-weight: 450;
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     padding-left: 3rem;
     padding-right: 3rem;
 }
@@ -1307,7 +1307,6 @@ footer{
     background-image: url(../assets/img/info-contacto.svg);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(4,1fr);
@@ -1316,8 +1315,8 @@ footer{
 }
 
 .info-contacto h3{
-    grid-column: 1/2;
-    grid-row: 1/2;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     font-size: 4rem;
     font-weight: bold;
     justify-self: start;
@@ -1337,45 +1336,42 @@ footer{
 }
 
 .texto-contacto{
-    grid-column: 1/3;
-    grid-row: 2/3;
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
     font-size: 2.4rem;
-    font-weight: bold;
-    margin: 3rem;
+    font-weight: normal;
+    margin: 2rem;
     justify-self: start;
     align-self: center;
     text-align: start;
 }
 
 .mail{
-    grid-row: 3/4;
-    grid-column: 1/2;
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
     text-align: center;
     font-weight: normal;
-    font-size: 2rem;
+    font-size: 1.5rem;
     justify-self: center;
     align-self: center;
-    color: #D9D9D9;
 }
 .phone{
     grid-row: 3/4;
     grid-column: 2/3;
     text-align: center;
     font-weight: normal;
-    font-size: 2rem;
+    font-size: 1.5rem;
     justify-self: center;
     align-self: center;
-    color: #D9D9D9;
 }
 .ubi{
     grid-row: 3/4;
     grid-column: 3/4;
     text-align: center;
     font-weight: normal;
-    font-size: 2rem;
+    font-size: 1.5rem;
     justify-self: center;
     align-self: center;
-    color: #D9D9D9;
 }
 .empresa-contacto{
     grid-row: 4/5;
@@ -1386,12 +1382,13 @@ footer{
     justify-self: end;
     align-self: end;
     margin-right: 3rem;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
     color: #D9D9D9 ;
 }
 
 .info-contacto i{
-    font-size: 2rem;
+    font-size: 1.5rem;
+    margin: 10px;
 }
 
                                                     /****/
