--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
     overflow-x: hidden;
 }
                                                     /****/
-                                                /* NAVBAR */
+                                                /**NAVBAR**/
                                                     /****/
 
 
@@ -352,7 +352,7 @@ footer{
 
 .logoFooter img{
     width: 540px;
-    height: 150px;
+    height: 250px;
 }
 
 .menu-footer{
@@ -1273,7 +1273,7 @@ footer{
 
 .contact-form input{
     width: 95%;
-    padding: 1rem;
+    padding: 1rem 1rem;
     border: none;
     background-color: #D9D9D9;
     font-size: 1.5rem;
@@ -1282,7 +1282,7 @@ footer{
 .contact-form textarea{
     width: 97%;
     height: 83%;
-    padding: 1rem;
+    padding: 1rem 1rem;
     border: none;
     background-color: #D9D9D9;
     font-size: 1.5rem;
@@ -1495,11 +1495,85 @@ footer{
         font-size: 1.5rem;
         margin: 3rem 0 3rem 3rem;
     }
+    .TituloHome h2{
+        font-size: 2.6rem;
+    }
+    .Contenido-Uno-Home h2{
+        font-size: 2.5rem;
+    }
+    .Contenido-Uno-Home .nombre-empresa{
+        font-size: 1rem;
+    }
+    .Contenido-Uno-Home p{
+        font-size: 1.3rem;
+    }
+    .FotoArticle1, .FotoArticle2{
+        grid-row: 1 / 4;
+        grid-column: 1/3;
+        width: 100%;
+        height: 100%;
+    }
+    .FotoArticle1 img, .FotoArticle2 img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+    .Contenido-Dos-Home, .Contenido-Tres-Home{
+        margin: 3rem;
+    }
+    .Contenido-Dos-Home h3, .Contenido-Tres-Home h3{
+        grid-row: 1/2;
+        font-size: 1.5rem;
+        padding-left: 16rem;
+        padding-right: 16rem;
+        align-self: center;
+        grid-column: 1/3;
+        grid-row: 1/2;
+    }
+    .Contenido-Tres-Home h3{
+        padding-left: 18rem;
+        padding-right: 18rem;
+    }
+    .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox{
+        grid-column: 1/2;
+        grid-row: 3/5;
+        height: 270px;
+        width: 270px;
+    }
+    .ClientesBox, .LeadsBox{
+        grid-column: 2/3;
+        justify-self: end;
+    }
+    .ProyectosBox p i, .ClientesBox p i, .CampañasBox p i, .LeadsBox p i{
+        font-size: 2.5rem;
+    }
+    .ProyectosBox p , .ClientesBox p, .CampañasBox p, .LeadsBox p{
+        font-size: 2.5rem;
+    }
+    .ClientesContainer{
+        height: 160px;
+    }
+    .LogosClientes{
+        column-gap: 3rem;
+        row-gap: 3rem;
+    }
+
+    
 }
+
+
+
+
 
 @media(max-width:1024px){
     .menu li a{
         font-size: 1rem;
+    }
+    .navbar{
+        padding: 1.25rem 1rem;
+    }
+    .menu li{
+        padding: 0 .5rem;
     }
     .navbar a{
         font-size: 1rem;
@@ -1521,6 +1595,7 @@ footer{
     }
     footer{
         grid-template-rows: repeat(6,1fr);
+        margin-top: 3rem;
     }
     .logoFooter{
         grid-column: 1/4 ;
@@ -1528,9 +1603,13 @@ footer{
         justify-self: center;
         align-self: center;
     }
+    .logoFooter img{
+        height: 150px;
+    }
     .partner{
         grid-column: 1/4 ;
         grid-row: 2/3;
+        align-self: center;
     }
     .redes-footer{
         grid-column: 1/4 ;
@@ -1547,12 +1626,84 @@ footer{
     .contact-form{
         column-gap: 30px;
     }
+    i{
+        margin: 0;
+    }
+    #logo-facebook{
+        width: 56px;
+        height: 64px;
+        margin: 0rem 4rem;
+    }
+    /*.TituloHome h2{
+        font-size: 2.6rem;
+    }
+    .Contenido-Uno-Home h2{
+        font-size: 2.5rem;
+    }
+    .Contenido-Uno-Home .nombre-empresa{
+        font-size: 1rem;
+    }
+    .Contenido-Uno-Home p{
+        font-size: 1.3rem;
+    }
+    .FotoArticle1, .FotoArticle2{
+        grid-row: 1 / 4;
+        grid-column: 1/3;
+        width: 100%;
+        height: 100%;
+    }
+    .FotoArticle1 img, .FotoArticle2 img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+    .Contenido-Dos-Home, .Contenido-Tres-Home{
+        margin: 3rem;
+    }
+    .Contenido-Dos-Home h3, .Contenido-Tres-Home h3{
+        grid-row: 1/2;
+        font-size: 1.5rem;
+        padding-left: 16rem;
+        padding-right: 16rem;
+        align-self: center;
+        grid-column: 1/3;
+        grid-row: 1/2;
+    }
+    .Contenido-Tres-Home h3{
+        padding-left: 18rem;
+        padding-right: 18rem;
+    }
+    .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox{
+        grid-column: 1/2;
+        grid-row: 3/5;
+        height: 270px;
+        width: 270px;
+    }
+    .ClientesBox, .LeadsBox{
+        grid-column: 2/3;
+        justify-self: end;
+    }
+    .ProyectosBox p i, .ClientesBox p i, .CampañasBox p i, .LeadsBox p i{
+        font-size: 2.5rem;
+    }
+    .ProyectosBox p , .ClientesBox p, .CampañasBox p, .LeadsBox p{
+        font-size: 2.5rem;
+    }
+    .ClientesContainer{
+        height: 160px;
+    }
+    .LogosClientes{
+        column-gap: 3rem;
+        row-gap: 3rem;
+    } */
+
+
 }
 
+
+
+
 @media(max-width: 768px){
-    .navbar-nav{
-        text-align: center;
-    }
     .carousel-item{
         height: 70vh;
     }
@@ -1577,14 +1728,31 @@ footer{
     .about-text{
         padding-top: 50px;
     }
+    .navbar-nav{
+        text-align: center;
+    }
+    .Logo-Titulo img{
+        height: 150px;
+    }
+    .Contacto-foto{
+        height: 350px;
+    }
+    .formulario-Contacto{
+        margin: 3rem;
+    }
     .info-contacto h3{
         font-size: 1.5rem;
+        margin: 3rem 0 0 3rem;
     }
     .texto-contacto{
         font-size: 1.3rem;
+        text-align: justify;
     }
     .empresa-contacto{
-    grid-column: 2/3;
+        grid-column: 3 / 4;
+        justify-self: center;
+        margin: 1rem 0;
+        font-size: 1rem;
     }
     .Titulo h1{
         font-size: 3rem;
@@ -1598,6 +1766,7 @@ footer{
     }
     .contacto1 h3{
         font-size: 2rem;
+        margin: 3rem;
     }
     .contact-form{
         grid-template-rows: repeat(5,1fr);
@@ -1605,18 +1774,22 @@ footer{
     .contact-form .nombre{
         grid-column: 1/3;
         grid-row: 1/2;
+        margin: 0;
     }
     .contact-form .email{
         grid-column: 1/3;
         grid-row: 2/3;
+        margin: 0;
     }
     .contact-form .teléfono{
         grid-column: 1/3;
         grid-row: 3/4;
+        margin: 0;
     }
     .contact-form .mensaje{
         grid-column: 1/3;
         grid-row: 4/5;
+        margin: 0;
     }
     .contact-form .enviar{
         grid-column: 1/3;
@@ -1624,15 +1797,64 @@ footer{
     }
     .contact-form .enviar{
         align-self: center;
+        text-align: center;
     }
 
     .contact-form label{
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
     .contact-form textarea{
         font-size: 1rem;
+        height: auto;
+        width: 95%;
+        padding: 1rem 0;
+    }
+    .contact-form input{
+        font-size: 1rem;
+        padding: 1rem 0;
+    }
+    .contact-form button{
+        width: 80%;
+    }
+    .mail,.phone,.ubi{
+        font-size: .8rem;
+    }
+    .info-contacto i{
+        font-size: 1.2rem;
     }
 }
+
+@media(max-width: 600px){
+    .texto-contacto{
+        grid-column: 1/4;
+        margin: 3rem;
+        font-size: 1rem;
+    }
+    .info-contacto h3{
+        grid-column: 1/3;
+    }
+    .menu-footer ul li a{
+        font-size: 2rem;
+    }
+    .menu-footer ul li{
+        padding: 10px;
+    }
+    .info-contacto i{
+        font-size: .75rem;
+    }
+    .mail,.phone,.ubi{
+        font-size: .7rem;
+    }
+    .navbar__div ul{
+        padding: 0;
+    }
+}
+@media(max-width:540px){
+    body{
+        width: 540px;
+    }
+}
+
 @media(max-width: 320px){
     
 }
