--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,6 @@ body {
     grid-row: 3/4;
     justify-self: center;
     align-self: end;
-    margin-top: -70px;
 }
 
 .LogoEmpresaHome img{
@@ -1496,7 +1495,8 @@ footer{
         margin: 3rem 0 3rem 3rem;
     }
     .TituloHome h2{
-        font-size: 2.6rem;
+        font-size: 3.5rem;
+        grid-column: 1/3;
     }
     .Contenido-Uno-Home h2{
         font-size: 2.5rem;
@@ -1524,75 +1524,58 @@ footer{
     .Contenido-Dos-Home h3, .Contenido-Tres-Home h3{
         grid-row: 1/2;
         font-size: 1.5rem;
-        padding-left: 16rem;
-        padding-right: 16rem;
+        padding-left: 34%;
+        padding-right: 34%;
         align-self: center;
         grid-column: 1/3;
-        grid-row: 1/2;
     }
     .Contenido-Tres-Home h3{
-        padding-left: 18rem;
-        padding-right: 18rem;
+        padding-left: 20%;
+        padding-right:  20%;
     }
     .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox{
         grid-column: 1/2;
         grid-row: 3/5;
-        height: 270px;
-        width: 270px;
+        height: 250px;
+        width: 250px;
+        justify-self: center;
     }
     .ClientesBox, .LeadsBox{
         grid-column: 2/3;
-        justify-self: end;
     }
     .ProyectosBox p i, .ClientesBox p i, .CampañasBox p i, .LeadsBox p i{
-        font-size: 2.5rem;
+        font-size: 2rem;
+        margin: 0.4rem;
     }
     .ProyectosBox p , .ClientesBox p, .CampañasBox p, .LeadsBox p{
-        font-size: 2.5rem;
+        font-size: 2rem;
+        margin: 0.4rem;
     }
     .ClientesContainer{
         height: 160px;
     }
     .LogosClientes{
-        column-gap: 3rem;
-        row-gap: 3rem;
+        column-gap: 10rem;
+        row-gap: 10rem;
     }
-
-    
-}
-
-
-
-
-
-@media(max-width:1024px){
     .menu li a{
-        font-size: 1rem;
-    }
-    .navbar{
-        padding: 1.25rem 1rem;
-    }
-    .menu li{
-        padding: 0 .5rem;
-    }
-    .navbar a{
-        font-size: 1rem;
-    }
-    .contact-form label{
         font-size: 1.5rem;
     }
-    .contact-form textarea{
-        font-size: 1.3rem;
+    .LogoEnNavbar{
+        font-size: 1.7rem;
+    }    
+}
+
+@media(max-width:1219px){
+
+    .LogosClientes{
+        column-gap: 7rem;
+        row-gap: 7rem;
     }
-    #GoogleMapsIframe{
-        width: 100%;
-        max-width: 1024px;
-        height: 380px ;
-    }
-    .ubicacion-mapa iframe{
-        max-width: 1024px;
-        margin: 0;
-    }
+    .LogosClientes img{
+        width: 150px;
+        height: 150px;
+    }    
     footer{
         grid-template-rows: repeat(6,1fr);
         margin-top: 3rem;
@@ -1623,6 +1606,39 @@ footer{
         grid-column: 1/4;
         grid-row: 6/7;
     }
+}
+
+
+
+
+@media(max-width:1024px){
+    .menu li a{
+        font-size: 1rem;
+    }
+    .navbar{
+        padding: 1.25rem 1rem;
+    }
+    .menu li{
+        padding: 0 .5rem;
+    }
+    .navbar a{
+        font-size: 1.5rem;
+    }
+    .contact-form label{
+        font-size: 1.5rem;
+    }
+    .contact-form textarea{
+        font-size: 1.3rem;
+    }
+    #GoogleMapsIframe{
+        width: 100%;
+        max-width: 1024px;
+        height: 380px ;
+    }
+    .ubicacion-mapa iframe{
+        max-width: 1024px;
+        margin: 0;
+    }
     .contact-form{
         column-gap: 30px;
     }
@@ -1634,11 +1650,14 @@ footer{
         height: 64px;
         margin: 0rem 4rem;
     }
-    /*.TituloHome h2{
+    .TituloHome{
+        height: 34.5rem;
+    }
+    .TituloHome h2{
         font-size: 2.6rem;
     }
-    .Contenido-Uno-Home h2{
-        font-size: 2.5rem;
+        .Contenido-Uno-Home h2{
+            font-size: 2.5rem;
     }
     .Contenido-Uno-Home .nombre-empresa{
         font-size: 1rem;
@@ -1646,57 +1665,21 @@ footer{
     .Contenido-Uno-Home p{
         font-size: 1.3rem;
     }
-    .FotoArticle1, .FotoArticle2{
-        grid-row: 1 / 4;
-        grid-column: 1/3;
-        width: 100%;
-        height: 100%;
+    .Contenido-Dos-Home h3{
+        padding-left: 28%;
+        padding-right: 28%;
     }
-    .FotoArticle1 img, .FotoArticle2 img{
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
-    .Contenido-Dos-Home, .Contenido-Tres-Home{
-        margin: 3rem;
-    }
-    .Contenido-Dos-Home h3, .Contenido-Tres-Home h3{
-        grid-row: 1/2;
-        font-size: 1.5rem;
-        padding-left: 16rem;
-        padding-right: 16rem;
-        align-self: center;
-        grid-column: 1/3;
-        grid-row: 1/2;
-    }
-    .Contenido-Tres-Home h3{
-        padding-left: 18rem;
-        padding-right: 18rem;
-    }
-    .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox{
-        grid-column: 1/2;
-        grid-row: 3/5;
-        height: 270px;
-        width: 270px;
-    }
-    .ClientesBox, .LeadsBox{
-        grid-column: 2/3;
-        justify-self: end;
-    }
-    .ProyectosBox p i, .ClientesBox p i, .CampañasBox p i, .LeadsBox p i{
+    .ClientesContainer h2{
         font-size: 2.5rem;
-    }
-    .ProyectosBox p , .ClientesBox p, .CampañasBox p, .LeadsBox p{
-        font-size: 2.5rem;
-    }
-    .ClientesContainer{
-        height: 160px;
     }
     .LogosClientes{
-        column-gap: 3rem;
+        column-gap: 10rem;
         row-gap: 3rem;
-    } */
-
+    }
+    .Contenido-Tres-Home h3{
+        padding-left: 33%;
+        padding-right: 33%;
+    }
 
 }
 
@@ -1822,6 +1805,50 @@ footer{
     .info-contacto i{
         font-size: 1.2rem;
     }
+    .TituloHome h1{
+        grid-column: 1/3;
+        font-size: 1rem;
+    }
+    .LineaDivisoraTitulo{
+        grid-column: 1/3;
+        width: 67%;
+    }
+    .Contenido-Uno-Home h2{
+        font-size: 2rem;
+    }
+    .Contenido-Uno-Home .nombre-empresa{
+        font-size: .5rem;
+        margin-right: 1.2rem;
+    }
+    .Contenido-Uno-Home p{
+        font-size: 1rem;
+        margin: 1rem 2rem;
+    }
+    .Contenido-Dos-Home h3{
+        padding-left: 18%;
+        padding-right: 18%;
+    }
+    .Contenido-Tres-Home h3{
+        padding-left: 23%;
+        padding-right: 23%;
+    }
+    .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox{
+        height: 204px;
+        width: 200px;
+        justify-self: start;
+    }
+    .LeadsBox, .ClientesBox{
+        justify-self: end;
+    }
+    .ProyectosBox p, .ClientesBox p, .CampañasBox p, .LeadsBox p{
+        font-size: 1.5rem;
+    }
+    .ProyectosBox p i, .ClientesBox p i, .CampañasBox p i, .LeadsBox p i{
+        font-size: 1.5rem;
+    }
+    .LogosClientes{
+        column-gap: 3rem;
+    }
 }
 
 @media(max-width: 600px){
@@ -1849,6 +1876,66 @@ footer{
         padding: 0;
     }
 }
+
+@media(max-width:425px){
+    .TituloHome h1{
+        grid-column: 1/4;
+        padding: 1rem 0;
+        justify-self: center;
+        margin: 0;
+        align-self: end
+    }
+    .LineaDivisoraTitulo{
+        grid-column: 1/4;
+        align-self: start;
+        justify-self: center;
+        margin: 0;
+    }
+    .TituloHome h2{
+        grid-column: 1/4;
+        margin: 0;
+        justify-self: center;
+    }
+    .TituloHome{
+        height: 33rem;
+    }
+    .LogoEmpresaHome img{
+        height: 150px;
+    }
+    .Contenido-Dos-Home, .Contenido-Tres-Home{
+        grid-template-rows: repeat(2, 202px);
+    }
+    .FotoArticle1, .FotoArticle2{
+        grid-row: 1/3;
+    }
+    .Contenido-Dos-Home h3{
+        padding-left: 11%;
+        padding-right: 11%;
+        font-size: 1.2rem;
+    }
+    .Contenido-Tres-Home h3{
+        padding-left: 13%;
+        padding-right: 13%;
+        font-size: 1.3rem;
+    }
+    .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox{
+        height: 150px;
+        width: 150px;
+        grid-row: 2/3;
+        align-self: end;
+    }
+    .ClientesContainer{
+        margin-top: 3rem;
+    }
+    .ClientesContainer h2{
+        font-size: 2rem;
+    }
+    .LogosClientes{
+        column-gap: 10rem;
+    }
+}
+
+
 @media(max-width:540px){
     body{
         width: 540px;
