--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,11 @@
 // UTILITIES 
 
+@import "./utilities/variables";
 @import "./utilities/maps";
 @import "./utilities/mixin";
 
 // BASE 
+
 @import "./base/fuente";
 @import "./base/reset";
 
