--- a/scss/utilities/_maps.scss
+++ b/scss/utilities/_maps.scss
@@ -2,9 +2,16 @@ $colores:(
     color-back: #f7f5f6,
     texto-back: #0a2424,
     Copy-back: #005049,
-    text-color1: #ffffff,
-    text-color2: #000000,
-    text-color3: #1d907a,
+    texto-color1: #ffffff,
+    texto-color2: #000000,
+    texto-color3: #1d907a,
     box-color1: #00798b,
     box-color2: #004c44,
 );
+
+$fontsize:(
+    lg: 3rem,
+    md-lg: 2rem,
+    md: 1.5rem,
+    sm: 1rem, 
+) ;
