--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,8 +25,9 @@
 // MEDIA 
 
 @import "./layout/media/media1440";
-@import "./layout/media/_media1219";
-@import "./layout/media/_media1024";
-@import "./layout/media/_media768";
-@import "./layout/media/_media600";
-@import "./layout/media/_media425";
+@import "./layout/media/media1219";
+@import "./layout/media/media1024";
+@import "./layout/media/media876";
+@import "./layout/media/media768";
+@import "./layout/media/media600";
+@import "./layout/media/media425";
