--- a/scss/utilities/_maps.scss
+++ b/scss/utilities/_maps.scss
@@ -7,6 +7,7 @@ $colores:(
     texto-color3: #1d907a,
     box-color1: #00798b,
     box-color2: #004c44,
+    back-form: #D9D9D9,
 );
 
 $fontsize:(
