--- a/scss/layout/media/_media1024.scss
+++ b/scss/layout/media/_media1024.scss
@@ -112,4 +112,47 @@
     .servicio-seo{
         grid-row: 4/5;
     }
+    /* NOSOTROS PAGE */
+
+    .Trabajadores-box{
+        grid-column: 1/2;
+        justify-self: center;
+    }
+    .Ideas-box{
+        grid-column: 2/3;
+        justify-self: center;
+    }
+    .mujer1-box{
+        height: 350px;
+        h3{
+            font-size: 2rem;
+            margin: 1rem 3rem;
+        }
+        p{
+            font-size: 1.2rem;
+            margin: 1rem 1rem 1rem 3rem;
+            text-align: start;
+        }
+    }
+    .mujer1-img{
+        height: 300px;
+        align-self: center;
+        img{
+            width: 300px;
+            height: 300px;
+        }
+    } 
+    .hombre1-box{
+        height: 350px;
+        h3{
+            font-size: 2rem;
+            margin: 1rem 3rem;
+        }
+        p{
+            font-size: 1.2rem;
+            margin: 1rem 1rem 1rem 3rem;
+            text-align: start;
+        }
+    }
+
 }
