--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,3 +31,4 @@
 @import "./layout/media/media768";
 @import "./layout/media/media600";
 @import "./layout/media/media425";
+@import "./layout/media/media320";
