--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,7 @@ footer {
     font-size: 1.5rem;
     font-weight: normal;
     margin: 0rem 3rem;
-    padding: 1rem 0 0 0; }
+    padding: 1.5rem 0 0 0; }
 
 .Logo-Titulo {
   grid-column: 2/3;
@@ -410,7 +410,7 @@ footer {
 .mujer1-img, .mujer2-img, .mujer3-img, .hombre1-img, .hombre2-img, .hombre3-img {
   grid-column: 1/2;
   grid-row: 1/2;
-  justify-self: end;
+  justify-self: center;
   align-self: none; }
   .mujer1-img img, .mujer2-img img, .mujer3-img img, .hombre1-img img, .hombre2-img img, .hombre3-img img {
     width: 500px;
@@ -440,7 +440,7 @@ footer {
 .hombre1-img, .hombre2-img, .hombre3-img {
   grid-column: 2/3;
   grid-row: 1/2;
-  justify-self: start; }
+  justify-self: center; }
 
 .hombre1-box, .hombre2-box, .hombre3-box {
   grid-column: 1/2;
@@ -919,7 +919,9 @@ ul {
     margin: 3rem; }
   .servicios {
     margin: 3rem;
-    column-gap: 5rem; } }
+    column-gap: 5rem; }
+  .Titulo p {
+    padding: 1rem 0; } }
 
 @media (max-width: 1219px) {
   .LogosClientes {
@@ -1032,7 +1034,38 @@ ul {
   .servicio-rebranding {
     grid-row: 3/4; }
   .servicio-seo {
-    grid-row: 4/5; } }
+    grid-row: 4/5; }
+  /* NOSOTROS PAGE */
+  .Trabajadores-box, .Ideas-box {
+    grid-column: 1/2;
+    justify-self: center; }
+  .Ideas-box {
+    grid-column: 2/3;
+    justify-self: center; }
+  .mujer1-box, .mujer2-box, .mujer3-box {
+    height: 350px; }
+    .mujer1-box h3, .mujer2-box h3, .mujer3-box h3 {
+      font-size: 2rem;
+      margin: 1rem 3rem; }
+    .mujer1-box p, .mujer2-box p, .mujer3-box p {
+      font-size: 1.2rem;
+      margin: 1rem 1rem 1rem 3rem;
+      text-align: start; }
+  .mujer1-img, .mujer2-img, .mujer3-img, .hombre1-img, .hombre2-img, .hombre3-img {
+    height: 300px;
+    align-self: center; }
+    .mujer1-img img, .mujer2-img img, .mujer3-img img, .hombre1-img img, .hombre2-img img, .hombre3-img img {
+      width: 300px;
+      height: 300px; }
+  .hombre1-box, .hombre2-box, .hombre3-box {
+    height: 350px; }
+    .hombre1-box h3, .hombre2-box h3, .hombre3-box h3 {
+      font-size: 2rem;
+      margin: 1rem 3rem; }
+    .hombre1-box p, .hombre2-box p, .hombre3-box p {
+      font-size: 1.2rem;
+      margin: 1rem 1rem 1rem 3rem;
+      text-align: start; } }
 
 @media (min-width: 876px) {
   .label_hamburguesa {
@@ -1185,7 +1218,38 @@ ul {
     padding: 0rem 4rem;
     text-align: justify; }
   .menu_hamburguesa:checked ~ .ul_links {
-    order: 1; } }
+    order: 1; }
+  /* NOSOTROS PAGE */
+  .Logo-Titulo {
+    display: none; }
+  .Titulo h1 {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    text-align: center; }
+  .Titulo p {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    justify-self: center;
+    margin: 0 3rem; }
+  .About-Teamwork {
+    height: auto; }
+  .Trabajadores-box p, .Ideas-box p, .Ideas-box p {
+    font-size: 1.7rem; }
+    .Trabajadores-box p i, .Ideas-box p i, .Ideas-box p i {
+      font-size: 3rem; }
+  .Trabajadores-box, .Ideas-box, .Ideas-box {
+    width: 300px;
+    height: 180px; }
+  .mujer-1, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3, .hombre-2, .hombre-3 {
+    grid-template-rows: repeat(2, 1fr); }
+  .mujer1-img, .mujer2-img, .mujer3-img, .hombre1-img, .hombre2-img, .hombre3-img, .mujer2-img, .mujer3-img, .hombre1-img, .hombre2-img, .hombre3-img, .hombre2-img, .hombre3-img {
+    grid-column: 1/3;
+    height: auto; }
+  .mujer1-box, .mujer2-box, .mujer3-box, .mujer2-box, .mujer3-box, .hombre1-box, .hombre2-box, .hombre3-box, .hombre2-box, .hombre3-box {
+    grid-column: 1/3;
+    grid-row: 2/3; }
+  .mujer1-img img, .mujer2-img img, .mujer3-img img, .hombre1-img img, .hombre2-img img, .hombre3-img img, .mujer2-img img, .mujer3-img img, .hombre1-img img, .hombre2-img img, .hombre3-img img, .hombre2-img img, .hombre3-img img {
+    height: 360px; } }
 
 @media (max-width: 600px) {
   .texto-contacto {
@@ -1299,4 +1363,63 @@ ul {
   .logo {
     font-size: 1rem; }
   .copyright p {
-    font-size: .5rem; } }
+    font-size: .5rem; }
+  /* NOSTORS PAGE*/
+  .About-Teamwork {
+    height: 150px; }
+  .Trabajadores-box, .Ideas-box, .Ideas-box {
+    width: 100px;
+    height: auto; }
+  .Trabajadores-box p, .Ideas-box p, .Ideas-box p {
+    font-size: 1rem; }
+    .Trabajadores-box p i, .Ideas-box p i, .Ideas-box p i {
+      font-size: 1rem; }
+    .Trabajadores-box p strong, .Ideas-box p strong, .Ideas-box p strong {
+      font-size: 1rem; }
+  .mujer1-box, .mujer2-box, .mujer3-box, .mujer2-box, .mujer3-box, .mujer2-box, .mujer3-box, .hombre1-box, .hombre2-box, .hombre3-box, .hombre2-box, .hombre3-box, .hombre2-box, .hombre3-box {
+    height: 350px;
+    align-self: start; }
+    .mujer1-box p, .mujer2-box p, .mujer3-box p, .mujer2-box p, .mujer3-box p, .mujer2-box p, .mujer3-box p, .hombre1-box p, .hombre2-box p, .hombre3-box p, .hombre2-box p, .hombre3-box p, .hombre2-box p, .hombre3-box p {
+      margin: 0 .5rem;
+      font-size: 1rem;
+      text-align: center; }
+    .mujer1-box h3, .mujer2-box h3, .mujer3-box h3, .mujer2-box h3, .mujer3-box h3, .mujer2-box h3, .mujer3-box h3, .hombre1-box h3, .hombre2-box h3, .hombre3-box h3, .hombre2-box h3, .hombre3-box h3, .hombre2-box h3, .hombre3-box h3 {
+      margin: .5rem 0;
+      font-size: 1.3rem;
+      text-align: center; }
+  .mujer1-box, .mujer2-box, .mujer3-box, .mujer2-box, .mujer3-box {
+    border-top: 10px solid #00798b;
+    border-left: none; }
+  .hombre1-box, .hombre2-box, .hombre3-box, .hombre2-box, .hombre3-box {
+    border-top: 10px solid #004c44;
+    border-right: none; }
+  .mujer-1, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3, .hombre-2, .hombre-3 {
+    margin: 3rem 4rem; }
+  .mujer1-img, .mujer2-img, .mujer3-img, .hombre1-img, .hombre2-img, .hombre3-img, .mujer2-img, .mujer3-img, .hombre1-img, .hombre2-img, .hombre3-img, .hombre2-img, .hombre3-img, .mujer2-img, .mujer3-img, .hombre1-img, .hombre2-img, .hombre3-img, .hombre2-img, .hombre3-img, .hombre2-img, .hombre3-img {
+    height: 360px; }
+  .logoFooter img {
+    height: 150px;
+    width: 350px; }
+  #logo-facebook {
+    margin: 0rem 2rem 0rem 1rem; } }
+
+@media (max-width: 320px) {
+  .navbar-menu {
+    padding: .5rem; }
+  .logoFooter img {
+    width: 250px; }
+  .Titulo p {
+    font-size: .8rem;
+    padding: 0; }
+  .Trabajadores-box, .Ideas-box, .Ideas-box, .Ideas-box {
+    height: 50px; }
+  .Trabajadores-box p, .Ideas-box p, .Ideas-box p {
+    font-size: .6rem; }
+    .Trabajadores-box p i, .Ideas-box p i, .Ideas-box p i {
+      font-size: .6rem; }
+    .Trabajadores-box p strong, .Ideas-box p strong, .Ideas-box p strong {
+      font-size: .6rem; }
+  .mujer1-box p, .mujer2-box p, .mujer3-box p, .mujer2-box p, .mujer3-box p, .mujer2-box p, .mujer3-box p, .mujer2-box p, .mujer3-box p, .hombre1-box p, .hombre2-box p, .hombre3-box p, .hombre2-box p, .hombre3-box p, .hombre2-box p, .hombre3-box p, .hombre2-box p, .hombre3-box p {
+    font-size: .9rem; }
+  .mujer-1, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3, .hombre-2, .hombre-3, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3, .hombre-2, .hombre-3, .hombre-2, .hombre-3 {
+    margin: 2.5rem 2rem; } }
