--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -188,4 +188,48 @@
     .menu_hamburguesa:checked ~ .ul_links{
         order: 1;
     }
+    /* NOSOTROS PAGE */
+    .Logo-Titulo{
+        display: none;
+    }
+    .Titulo {
+        h1{
+            grid-column: 1/3;
+            grid-row: 1/2;
+            text-align: center;
+        }
+        p{
+            grid-column: 1/3;
+            grid-row: 2/3;
+            justify-self: center; 
+            margin: 0 3rem;
+        }
+    }
+    .About-Teamwork{
+        height: auto;
+    }
+    .Trabajadores-box p, .Ideas-box p{
+        font-size: 1.7rem;
+        & i{
+            font-size: 3rem;
+        }
+    }
+    .Trabajadores-box, .Ideas-box{
+    width: 300px;
+    height: 180px;
+    }
+    .mujer-1, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3{
+        grid-template-rows: repeat(2,1fr);
+    }
+    .mujer1-img, .mujer2-img, .mujer3-img, .hombre1-img, .hombre2-img, .hombre3-img{
+        grid-column: 1/3;
+        height: auto;
+    }
+    .mujer1-box, .mujer2-box, .mujer3-box,.hombre1-box, .hombre2-box, .hombre3-box{
+        grid-column: 1/3;
+        grid-row: 2/3;
+    }
+    .mujer1-img img, .mujer2-img img, .mujer3-img img, .hombre1-img img, .hombre2-img img, .hombre3-img img{
+        height: 360px;
+    }
 }
