Aplicando Responsive a los demas HTML's que faltaban

--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -46,8 +46,8 @@ ul{
     transition: all .3s ease;
 }
 .link:hover{
-    padding: .3125rem .625rem;
+    padding: 0px 20px;
     background-color: white;
     color: black;
-    border-radius: .9375rem;
+    border-radius: 2.5rem;
 }
