--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -232,4 +232,12 @@
     .mujer1-img img, .mujer2-img img, .mujer3-img img, .hombre1-img img, .hombre2-img img, .hombre3-img img{
         height: 360px;
     }
+    // PORTFOLIO PAGE 
+    #TituloParrafo{
+        text-align: justify;
+        padding: .5rem .5rem;
+    }
+    .portfolioText{
+        font-size: 1rem;
+    }
 }
