--- a/css/style.css
+++ b/css/style.css
@@ -842,10 +842,10 @@ ul {
   transition: all .3s ease; }
 
 .link:hover {
-  padding: .3125rem .625rem;
+  padding: 0px 20px;
   background-color: white;
   color: black;
-  border-radius: .9375rem; }
+  border-radius: 2.5rem; }
 
 @media (max-width: 1440px) {
   .info-contacto h3 {
@@ -1065,7 +1065,13 @@ ul {
     .hombre1-box p, .hombre2-box p, .hombre3-box p {
       font-size: 1.2rem;
       margin: 1rem 1rem 1rem 3rem;
-      text-align: start; } }
+      text-align: start; }
+  .background-work1, .background-work2, .background-work2 {
+    align-content: center; }
+  .portfolios {
+    grid-template-columns: repeat(1, 1fr); }
+  #TituloParrafo {
+    font-size: 1.1rem; } }
 
 @media (min-width: 876px) {
   .label_hamburguesa {
@@ -1249,7 +1255,12 @@ ul {
     grid-column: 1/3;
     grid-row: 2/3; }
   .mujer1-img img, .mujer2-img img, .mujer3-img img, .hombre1-img img, .hombre2-img img, .hombre3-img img, .mujer2-img img, .mujer3-img img, .hombre1-img img, .hombre2-img img, .hombre3-img img, .hombre2-img img, .hombre3-img img {
-    height: 360px; } }
+    height: 360px; }
+  #TituloParrafo {
+    text-align: justify;
+    padding: .5rem .5rem; }
+  .portfolioText {
+    font-size: 1rem; } }
 
 @media (max-width: 600px) {
   .texto-contacto {
@@ -1270,6 +1281,10 @@ ul {
     padding: 0; } }
 
 @media (max-width: 425px) {
+  .navbar-menu {
+    padding: 0.5rem; }
+  .grid-titulo {
+    grid-template-columns: repeat(1, 1fr); }
   .TituloHome h1 {
     grid-column: 1/4;
     padding: 1rem 0;
@@ -1284,22 +1299,32 @@ ul {
   .TituloHome h2 {
     grid-column: 1/4;
     margin: 0;
-    justify-self: center; }
+    justify-self: center;
+    text-align: center; }
   .TituloHome {
     height: 33rem; }
+  .TituloHome .LogoEmpresaHome {
+    grid-column: 1/3;
+    grid-row: 3/4; }
   .LogoEmpresaHome img {
     height: 150px; }
+  .Contenido-Uno-Home {
+    margin: 2rem; }
+  .Contenido-Uno-Home .nombre-empresa {
+    margin: 0; }
+  .Contenido-Uno-Home p {
+    margin: 0 0 1rem 0;
+    padding: 0; }
   .Contenido-Dos-Home, .Contenido-Tres-Home, .Contenido-Tres-Home {
-    grid-template-rows: repeat(2, 202px); }
+    grid-template-rows: repeat(2, 202px);
+    margin: 1rem; }
   .FotoArticle1, .FotoArticle2, .FotoArticle2 {
     grid-row: 1/3; }
   .Contenido-Dos-Home h3, .Contenido-Tres-Home h3 {
-    padding-left: 11%;
-    padding-right: 11%;
+    padding-left: 7%;
+    padding-right: 7%;
     font-size: 1.2rem; }
   .Contenido-Tres-Home h3 {
-    padding-left: 13%;
-    padding-right: 13%;
     font-size: 1.3rem; }
   .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox {
     height: 150px;
@@ -1312,6 +1337,9 @@ ul {
     font-size: 2rem; }
   .LogosClientes {
     column-gap: 10rem; }
+  .LogosClientes img {
+    width: 90px;
+    height: 90px; }
   .Titulo h1 {
     grid-column: 1/3;
     grid-row: 1/2;
@@ -1400,8 +1428,24 @@ ul {
   .logoFooter img {
     height: 150px;
     width: 350px; }
+  .redes-footer i {
+    margin: 0; }
   #logo-facebook {
-    margin: 0rem 2rem 0rem 1rem; } }
+    margin: 0rem 4rem; }
+  .carre-img img, .faber-img img, .sinte-img img, .cine-img img, .farma-img img, .grido-img img {
+    width: 350px;
+    height: auto; }
+  #TituloParrafo {
+    font-size: 1rem; }
+  .Portfolio-box h2 {
+    font-size: 1.5rem; }
+  .portfolios {
+    margin: 2rem;
+    row-gap: 2rem; }
+  .Carre-work h3, .Faber-work h3, .sinte-work h3, .Cine-work h3, .Farma-work h3, .Grido-work h3 {
+    font-size: 2rem; }
+  .portfolioText {
+    font-size: .85rem; } }
 
 @media (max-width: 320px) {
   .navbar-menu {
@@ -1422,4 +1466,28 @@ ul {
   .mujer1-box p, .mujer2-box p, .mujer3-box p, .mujer2-box p, .mujer3-box p, .mujer2-box p, .mujer3-box p, .mujer2-box p, .mujer3-box p, .hombre1-box p, .hombre2-box p, .hombre3-box p, .hombre2-box p, .hombre3-box p, .hombre2-box p, .hombre3-box p, .hombre2-box p, .hombre3-box p {
     font-size: .9rem; }
   .mujer-1, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3, .hombre-2, .hombre-3, .mujer-2, .mujer-3, .hombre-1, .hombre-2, .hombre-3, .hombre-2, .hombre-3, .hombre-2, .hombre-3 {
-    margin: 2.5rem 2rem; } }
+    margin: 2.5rem 2rem; }
+  .Contenido-Dos-Home h3, .Contenido-Tres-Home h3 {
+    font-size: 1rem;
+    padding: 0 9%; }
+  .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox {
+    opacity: 90%;
+    height: auto;
+    width: auto; }
+  .FotoArticle1, .FotoArticle2, .FotoArticle2, .FotoArticle2 {
+    grid-row: 1/4; }
+  .FotoArticle1 img, .FotoArticle2 img, .FotoArticle2 img {
+    object-fit: cover; }
+  #TituloParrafo {
+    font-size: .8rem;
+    text-align: center; }
+  .Portfolio-foto {
+    height: 300px; }
+  .carre-img img, .faber-img img, .sinte-img img, .cine-img img, .farma-img img, .grido-img img {
+    width: 300px; }
+  .portfolios {
+    row-gap: 3rem; }
+  .background-work1, .background-work2, .background-work2, .background-work2 {
+    height: auto; }
+  .portfolioText {
+    padding: 0 1rem; } }
