--- a/scss/layout/media/_media425.scss
+++ b/scss/layout/media/_media425.scss
@@ -1,4 +1,10 @@
 @media(max-width:425px){
+    .navbar-menu{
+        padding: 0.5rem;
+    }
+    .grid-titulo{
+        grid-template-columns: repeat(1,1fr);
+    }
     .TituloHome h1{
         grid-column: 1/4;
         padding: 1rem 0;
@@ -16,27 +22,41 @@
         grid-column: 1/4;
         margin: 0;
         justify-self: center;
+        text-align: center;
     }
     .TituloHome{
         height: 33rem;
     }
+    .TituloHome .LogoEmpresaHome{
+        grid-column: 1/3;
+        grid-row: 3/4;
+    }
     .LogoEmpresaHome img{
         height: 150px;
     }
+    .Contenido-Uno-Home{
+        margin: 2rem;
+    }
+    .Contenido-Uno-Home .nombre-empresa{
+        margin: 0;
+    }
+    .Contenido-Uno-Home p{
+        margin: 0 0 1rem 0;
+        padding: 0;
+    }
     .Contenido-Dos-Home, .Contenido-Tres-Home{
         grid-template-rows: repeat(2, 202px);
+        margin: 1rem;
     }
     .FotoArticle1, .FotoArticle2{
         grid-row: 1/3;
     }
     .Contenido-Dos-Home h3{
-        padding-left: 11%;
-        padding-right: 11%;
+        padding-left: 7%;
+        padding-right: 7%;
         font-size: 1.2rem;
     }
     .Contenido-Tres-Home h3{
-        padding-left: 13%;
-        padding-right: 13%;
         font-size: 1.3rem;
     }
     .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox{
@@ -53,6 +73,10 @@
     }
     .LogosClientes{
         column-gap: 10rem;
+    }
+    .LogosClientes img{
+        width: 90px;
+        height: 90px;
     }
     .Titulo h1{
         grid-column: 1/3;
@@ -173,7 +197,31 @@
         height: 150px;
         width: 350px;
     }
+    .redes-footer i{
+        margin: 0;
+    }
     #logo-facebook {
-        margin: 0rem 2rem 0rem 1rem;
+        margin: 0rem 4rem;
+    }
+    // PORTFOLIO PAGE
+    .carre-img img, .faber-img img, .sinte-img img, .cine-img img, .farma-img img, .grido-img img{
+        width: 350px;
+        height: auto;
+    }
+    #TituloParrafo{
+        font-size: 1rem;
+    }
+    .Portfolio-box h2{
+        font-size: 1.5rem;
+    }
+    .portfolios{
+        margin: 2rem;
+        row-gap: 2rem;
+    }
+    .Carre-work h3, .Faber-work h3, .sinte-work h3, .Cine-work h3, .Farma-work h3, .Grido-work h3{
+        font-size: 2rem;
+    }
+    .portfolioText{
+        font-size: .85rem;
     }
 }
