Aplicando Responsive a la HOMEPAGE

--- a/scss/layout/media/_media1052.scss
+++ b/scss/layout/media/_media1052.scss
@@ -1,4 +1,4 @@
-@media(max-width:1024px){
+@media(max-width:1052px){
     .menu li a{
         font-size: 1rem;
     }
@@ -53,8 +53,7 @@
         font-size: 1.3rem;
     }
     .Contenido-Dos-Home h3{
-        padding-left: 28%;
-        padding-right: 28%;
+        padding: 0% 28%;
     }
     .ClientesContainer h2{
         font-size: 2.5rem;
@@ -64,8 +63,7 @@
         row-gap: 3rem;
     }
     .Contenido-Tres-Home h3{
-        padding-left: 33%;
-        padding-right: 33%;
+        padding: 0% 33%;
     }
     .Titulo h1{
         font-size: 2.5rem;
