--- a/css/style.css
+++ b/css/style.css
@@ -859,7 +859,8 @@ ul {
     margin: 3rem 0 3rem 3rem; }
   .TituloHome h2 {
     font-size: 3.5rem;
-    grid-column: 1/3; }
+    grid-column: 1/2;
+    margin: 0rem 0rem 0rem 3rem; }
   .Contenido-Uno-Home h2 {
     font-size: 2.5rem; }
   .Contenido-Uno-Home .nombre-empresa {
@@ -923,9 +924,15 @@ ul {
   .Titulo p {
     padding: 1rem 0; } }
 
+@media (max-width: 1250px) {
+  .TituloHome h1 {
+    font-size: 1rem; }
+  .TituloHome h2 {
+    font-size: 3rem; } }
+
 @media (max-width: 1219px) {
   .LogosClientes {
-    column-gap: 7rem;
+    column-gap: 5rem;
     row-gap: 7rem; }
   .LogosClientes img {
     width: 150px;
@@ -954,7 +961,24 @@ ul {
     grid-column: 1/4;
     grid-row: 6/7; } }
 
-@media (max-width: 1024px) {
+@media (max-width: 1192px) {
+  .Contenido-Dos-Home h3, .Contenido-Tres-Home h3 {
+    padding: 0% 30%; }
+  .Contenido-Tres-Home h3 {
+    padding: 0% 35.5%; } }
+
+@media (max-width: 1100px) {
+  .TituloHome h2 {
+    font-size: 2.5rem; }
+  .Contenido-Dos-Home h3, .Contenido-Tres-Home h3 {
+    padding: 0% 29%; }
+  .Contenido-Tres-Home h3 {
+    padding: 0% 35.5%; }
+  .LogosClientes {
+    column-gap: 9rem;
+    row-gap: 5rem; } }
+
+@media (max-width: 1052px) {
   .menu li a {
     font-size: 1rem; }
   .navbar {
@@ -993,16 +1017,14 @@ ul {
   .Contenido-Uno-Home p {
     font-size: 1.3rem; }
   .Contenido-Dos-Home h3, .Contenido-Tres-Home h3 {
-    padding-left: 28%;
-    padding-right: 28%; }
+    padding: 0% 28%; }
   .ClientesContainer h2 {
     font-size: 2.5rem; }
   .LogosClientes {
     column-gap: 10rem;
     row-gap: 3rem; }
   .Contenido-Tres-Home h3 {
-    padding-left: 33%;
-    padding-right: 33%; }
+    padding: 0% 33%; }
   .Titulo h1 {
     font-size: 2.5rem; }
   .Titulo p {
@@ -1073,7 +1095,15 @@ ul {
   #TituloParrafo {
     font-size: 1.1rem; } }
 
-@media (min-width: 876px) {
+@media (min-width: 933px) and (max-width: 1009px) {
+  .Contenido-Dos-Home h3, .Contenido-Tres-Home h3 {
+    padding: 0% 26%; }
+  .Contenido-Tres-Home h3 {
+    padding: 0% 31%; }
+  .TituloHome h2 {
+    font-size: 2.3rem; } }
+
+@media (min-width: 933px) {
   .label_hamburguesa {
     display: none; }
   .ul_links {
@@ -1084,6 +1114,17 @@ ul {
     gap: 2rem; }
   .link {
     font-size: 1.2rem; } }
+
+@media (min-width: 769px) and (max-width: 933px) {
+  .TituloHome h1 {
+    grid-column: 1/3;
+    font-size: 1rem; }
+  .TituloHome h2 {
+    font-size: 1.8rem; }
+  .Contenido-Dos-Home h3, .Contenido-Tres-Home h3 {
+    padding: 0% 20%; }
+  .Contenido-Tres-Home h3 {
+    padding: 0% 27%; } }
 
 @media (max-width: 768px) {
   .carousel-item {
@@ -1176,26 +1217,48 @@ ul {
     background-size: cover; }
   .info-contacto i {
     font-size: 1.2rem; }
+  .grid-titulo {
+    grid-template-columns: repeat(1, 1fr); }
   .TituloHome h1 {
-    grid-column: 1/3;
-    font-size: 1rem; }
+    grid-column: 1/4;
+    padding: 1rem 0;
+    justify-self: center;
+    margin: 0;
+    align-self: end; }
   .LineaDivisoraTitulo, .info-contacto hr {
+    grid-column: 1/4;
+    align-self: start;
+    justify-self: center;
+    margin: 0;
+    width: 95%; }
+  .TituloHome h2 {
+    grid-column: 1/4;
+    margin: 0;
+    justify-self: center;
+    text-align: center; }
+  .TituloHome {
+    height: 33rem; }
+  .TituloHome .LogoEmpresaHome {
     grid-column: 1/3;
-    width: 67%; }
+    grid-row: 3/4; }
+  .LogoEmpresaHome img {
+    height: 150px; }
+  .Contenido-Uno-Home, .Contenido-Dos-Home, .Contenido-Tres-Home, .Contenido-Tres-Home {
+    margin: 2rem; }
   .Contenido-Uno-Home h2 {
     font-size: 2rem; }
   .Contenido-Uno-Home .nombre-empresa {
     font-size: .5rem;
-    margin-right: 1.2rem; }
+    margin-right: 1.2rem;
+    padding: 0; }
   .Contenido-Uno-Home p {
     font-size: 1rem;
-    margin: 1rem 2rem; }
+    margin: 1rem 2rem;
+    padding: 0; }
   .Contenido-Dos-Home h3, .Contenido-Tres-Home h3 {
-    padding-left: 18%;
-    padding-right: 18%; }
+    padding: 0% 18%; }
   .Contenido-Tres-Home h3 {
-    padding-left: 23%;
-    padding-right: 23%; }
+    padding: 0% 23%; }
   .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox {
     height: 204px;
     width: 200px;
@@ -1262,7 +1325,7 @@ ul {
   .portfolioText {
     font-size: 1rem; } }
 
-@media (max-width: 600px) {
+@media (max-width: 611px) {
   .texto-contacto {
     grid-column: 1/4;
     margin: 3rem;
@@ -1278,36 +1341,15 @@ ul {
   .mail, .phone, .ubi, .phone, .ubi {
     font-size: .7rem; }
   .navbar__div ul {
-    padding: 0; } }
+    padding: 0; }
+  .Contenido-Dos-Home h3, .Contenido-Tres-Home h3 {
+    padding: 0% 13%; }
+  .FotoArticle1 img, .FotoArticle2 img {
+    object-fit: cover; } }
 
-@media (max-width: 425px) {
+@media (min-width: 425px) and (max-width: 606px) {
   .navbar-menu {
     padding: 0.5rem; }
-  .grid-titulo {
-    grid-template-columns: repeat(1, 1fr); }
-  .TituloHome h1 {
-    grid-column: 1/4;
-    padding: 1rem 0;
-    justify-self: center;
-    margin: 0;
-    align-self: end; }
-  .LineaDivisoraTitulo, .info-contacto hr {
-    grid-column: 1/4;
-    align-self: start;
-    justify-self: center;
-    margin: 0; }
-  .TituloHome h2 {
-    grid-column: 1/4;
-    margin: 0;
-    justify-self: center;
-    text-align: center; }
-  .TituloHome {
-    height: 33rem; }
-  .TituloHome .LogoEmpresaHome {
-    grid-column: 1/3;
-    grid-row: 3/4; }
-  .LogoEmpresaHome img {
-    height: 150px; }
   .Contenido-Uno-Home {
     margin: 2rem; }
   .Contenido-Uno-Home .nombre-empresa {
