--- a/scss/layout/media/_media1440.scss
+++ b/scss/layout/media/_media1440.scss
@@ -13,7 +13,8 @@
     }
     .TituloHome h2{
         font-size: 3.5rem;
-        grid-column: 1/3;
+        grid-column: 1/2;
+        margin: 0rem 0rem 0rem 3rem;
     }
     .Contenido-Uno-Home h2{
         font-size: 2.5rem;
