--- a/scss/layout/media/_media425.scss
+++ b/scss/layout/media/_media425.scss
@@ -1,38 +1,6 @@
-@media(max-width:425px){
+@media (min-width:425px) and (max-width:606px){
     .navbar-menu{
         padding: 0.5rem;
-    }
-    .grid-titulo{
-        grid-template-columns: repeat(1,1fr);
-    }
-    .TituloHome h1{
-        grid-column: 1/4;
-        padding: 1rem 0;
-        justify-self: center;
-        margin: 0;
-        align-self: end
-    }
-    .LineaDivisoraTitulo{
-        grid-column: 1/4;
-        align-self: start;
-        justify-self: center;
-        margin: 0;
-    }
-    .TituloHome h2{
-        grid-column: 1/4;
-        margin: 0;
-        justify-self: center;
-        text-align: center;
-    }
-    .TituloHome{
-        height: 33rem;
-    }
-    .TituloHome .LogoEmpresaHome{
-        grid-column: 1/3;
-        grid-row: 3/4;
-    }
-    .LogoEmpresaHome img{
-        height: 150px;
     }
     .Contenido-Uno-Home{
         margin: 2rem;
