--- a/scss/layout/media/_media611.scss
+++ b/scss/layout/media/_media611.scss
@@ -1,4 +1,4 @@
-@media(max-width: 600px){
+@media(max-width: 611px){
     .texto-contacto{
         grid-column: 1/4;
         margin: 3rem;
@@ -21,5 +21,12 @@
     }
     .navbar__div ul{
         padding: 0;
+    }
+    // HOME PAGE
+    .Contenido-Dos-Home h3{
+        padding: 0% 13%;
+    }
+    .FotoArticle1 img{
+        object-fit: cover;
     }
 }
