--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -121,13 +121,42 @@
     .info-contacto i{
         font-size: 1.2rem;
     }
+    // HOME PAGE
+    .grid-titulo{
+        grid-template-columns: repeat(1,1fr);
+    }
     .TituloHome h1{
-        grid-column: 1/3;
-        font-size: 1rem;
+        grid-column: 1/4;
+        padding: 1rem 0;
+        justify-self: center;
+        margin: 0;
+        align-self: end
     }
     .LineaDivisoraTitulo{
+        grid-column: 1/4;
+        align-self: start;
+        justify-self: center;
+        margin: 0;
+        width: 95%;
+    }
+    .TituloHome h2{
+        grid-column: 1/4;
+        margin: 0;
+        justify-self: center;
+        text-align: center;
+    }
+    .TituloHome{
+        height: 33rem;
+    }
+    .TituloHome .LogoEmpresaHome{
         grid-column: 1/3;
-        width: 67%;
+        grid-row: 3/4;
+    }
+    .LogoEmpresaHome img{
+        height: 150px;
+    }
+    .Contenido-Uno-Home,.Contenido-Dos-Home,.Contenido-Tres-Home{
+        margin: 2rem;
     }
     .Contenido-Uno-Home h2{
         font-size: 2rem;
@@ -135,18 +164,18 @@
     .Contenido-Uno-Home .nombre-empresa{
         font-size: .5rem;
         margin-right: 1.2rem;
+        padding: 0;
     }
     .Contenido-Uno-Home p{
         font-size: 1rem;
         margin: 1rem 2rem;
+        padding: 0;
     }
     .Contenido-Dos-Home h3{
-        padding-left: 18%;
-        padding-right: 18%;
+        padding: 0% 18%;
     }
     .Contenido-Tres-Home h3{
-        padding-left: 23%;
-        padding-right: 23%;
+        padding: 0% 23%;
     }
     .ProyectosBox, .ClientesBox, .CampañasBox, .LeadsBox{
         height: 204px;
