Arreglado el espaciado de las Redes

--- a/scss/layout/media/_media1052.scss
+++ b/scss/layout/media/_media1052.scss
@@ -162,4 +162,10 @@
     #TituloParrafo{
         font-size: 1.1rem;
     }
+    #logo-facebook{
+        margin: 0rem 1.5rem 0rem 2.5rem;
+    }
+    #logo-insta, #logo-linkedin{
+        margin: 0;
+    }
 }
